Added a progress bar, and stylized it in css. Progress bar is not yet functional

--- a/src/main/resources/light.css
+++ b/src/main/resources/light.css
@@ -187,3 +187,9 @@
 .rootPane {
 	-fx-background-color: #FFFFFF;
 }
+
+.progress-bar {
+    -fx-text-box-border: #000000;
+    -fx-control-inner-background: #FFFFFF;
+    -fx-accent: #008020;
+}
