--- a/src/main/resources/matrix.css
+++ b/src/main/resources/matrix.css
@@ -1,5 +1,6 @@
 .list-view {
 	-fx-background-color: #0D0208;
+	-fx-padding: 3px;
 }
 
 .list-cell:even {
@@ -88,12 +89,20 @@
 .infoLabel {
 	-fx-background-color: #0D0208;
 	-fx-text-fill: #00FF41;
+	-fx-padding: 5px;
 }
 
 .queueLabel {
 	-fx-background-color: #0D0208;
 	-fx-text-fill: #00FF41;
 	-fx-font-size: 16pt;
+}
+.timeLabel {
+    -fx-background-color: #0D0208;
+    -fx-text-fill: #008F11;
+    -fx-font-size: 16pt;
+    -fx-padding: 10px;
+
 }
 .searchField {
 	-fx-background-color: #0D0208;
