MeteorPlayer v1.2 is now available. It features:  - Everything from previous version (I take no joy in removing a working headphone jack)  - Fixed bugs which kept application running  - Added a few labels which clarify what is playing right    now and what is next in line  - Tweaked padding and spacing in .css files for value labelHBox

--- a/src/main/resources/matrix.css
+++ b/src/main/resources/matrix.css
@@ -77,9 +77,18 @@
 
 .labelHBox {
 	-fx-background-color: #0D0208;
-	-fx-padding: 15;
-	-fx-spacing: 250;
-
+	-fx-padding: 7;
+	-fx-spacing: 15;
+}
+.labelVBox {
+    -fx-background-color: #0d0208;
+    -fx-padding: 10;
+    -fx-spacing: 7;
+}
+.extraInfoLabel{
+    -fx-background-color: #0D0208;
+    -fx-text-fill: #00FF41;
+    -fx-font-size: 16pt;
 }
 .nowPlayingLabel {
 	-fx-background-color: #0D0208;
